@@ -5,4 +5,4 @@
 ############################################################################
 
 # Version
-ont.app.version=1.2.0.beta
+ont.app.version=1.2.1.beta
